[package]
authors = ["lettenj61 <lettenj61@users.noreply.github.com>"]
name = "rig"
version = "0.1.0"

[[bin]]
doc = false
name = "rig"

[dependencies]
docopt = "0.7.0"
env_logger = "0.4.0"
error-chain = "0.8.1"
git2 = "0.6.4"
java-properties = "1.0.0"
log = "0.3.6"
rand = "0.3.15"
rustc-serialize = "0.3.22"
tempdir = "0.3.5"
toml = "0.2.1"
url = "1.4.0"
walkdir = "1.0.7"
